--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,10 @@ project(HelloQtApp VERSION 1.0)
 # Ensure that CMake is looking for Qt5
 set(CMAKE_PREFIX_PATH "/usr/lib/x86_64-linux-gnu/cmake/Qt5")
 
+# Executable's filepath
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+
+
 # Find the required Qt5 components (Widgets for GUI apps)
 find_package(Qt5Widgets REQUIRED)
 find_package(Qt5 COMPONENTS Widgets REQUIRED)
@@ -19,3 +23,7 @@ add_executable(HelloQtApp main.cpp)
 
 # Link the executable with the Qt5 Widgets library
 target_link_libraries(HelloQtApp Qt5::Widgets)
+
+#included .qrc
+qt5_add_resources(RESOURCES resources.qrc)
+target_sources(HelloQtApp PRIVATE ${RESOURCES})
